[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nextline-test-utils"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Tai Sakuma", email = "tai.sakuma@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Tai Sakuma/nextline-test-utils#readme"
Issues = "https://github.com/Tai Sakuma/nextline-test-utils/issues"
Source = "https://github.com/Tai Sakuma/nextline-test-utils"

[tool.hatch.version]
path = "src/nextline_test_utils/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/nextline_test_utils tests}"

[tool.coverage.run]
source_pkgs = ["nextline_test_utils", "tests"]
branch = true
parallel = true
omit = [
  "src/nextline_test_utils/__about__.py",
]

[tool.coverage.paths]
nextline_test_utils = ["src/nextline_test_utils", "*/nextline-test-utils/src/nextline_test_utils"]
tests = ["tests", "*/nextline-test-utils/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
